--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Build library
       run: npm run build:library
     - name: Publish to npm
-      run: npm publish ./dist/angular-notifier
+      run: npm publish ./dist/angular14-notifier
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
