--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "angular-notifier",
+  "name": "angular14-notifier",
   "description": "A well designed, fully animated, highly customizable, and easy-to-use notification library for your Angular application.",
-  "version": "12.0.0",
+  "version": "12.0.2",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dominique-mueller/angular-notifier"
+    "url": "https://github.com/5gdispensing/angular14-notifier"
   },
   "keywords": [
     "angular",
@@ -24,10 +24,10 @@
     "build:demo": "ng build angular-notifier-demo --configuration production",
     "build:library": "rimraf -r dist && npm run build:library:angular && npm run build:library:sass && npm run build:library:css && npm run build:library:docs && npm run build:library:package",
     "build:library:angular": "ng build angular-notifier --configuration production",
-    "build:library:css": "sass projects/angular-notifier/src:dist/angular-notifier --style=expanded",
-    "build:library:docs": "copyfiles \"docs/**\" CHANGELOG.md MIGRATION-GUIDE.md LICENSE README.md \"dist/angular-notifier\"",
+    "build:library:css": "sass projects/angular-notifier/src:dist/angular14-notifier --style=expanded",
+    "build:library:docs": "copyfiles \"docs/**\" CHANGELOG.md MIGRATION-GUIDE.md LICENSE README.md \"dist/angular14-notifier\"",
     "build:library:package": "node tools/update-package.js",
-    "build:library:sass": "copyfiles \"projects/angular-notifier/src/**/*.scss\" \"dist/angular-notifier\" --up 3",
+    "build:library:sass": "copyfiles \"projects/angular-notifier/src/**/*.scss\" \"dist/angular14-notifier\" --up 3",
     "lint:library": "eslint projects/angular-notifier/src/**/*.ts --max-warnings 0",
     "lint:library:fix": "eslint projects/angular-notifier/src/**/*.ts --max-warnings 0 --fix",
     "start": "ng serve angular-notifier-demo",
