--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "target": "es2020",
     "lib": ["es2018", "dom"],
     "paths": {
-      "angular-notifier": ["dist/angular-notifier"]
+      "angular-notifier": ["dist/angular14-notifier"]
     }
   },
   "angularCompilerOptions": {
