--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "angular14-notifier",
-  "description": "A well designed, fully animated, highly customizable, and easy-to-use notification library for your Angular application.",
-  "version": "12.0.2",
+  "description": "Fork of angular-notifier which support Angular 14.",
+  "version": "12.0.3",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/5gdispensing/angular14-notifier"
+    "url": "https://github.com/5gdispensing/angular-notifier"
   },
   "keywords": [
     "angular",
